--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,10 +5,13 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+  <%= render partial: 'layouts/shiv' %>
 </head>
 <body>
-
-<%= yield %>
-
+	<%= render partial: 'layouts/header' %>
+	<div class="container">
+	<%= yield %>
+	<%= render partial: 'layouts/footer' %>
+	</div>
 </body>
 </html>
