--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,13 +5,17 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
-  <%= render partial: 'layouts/shiv' %>
+  <%= render 'layouts/shiv' %>
 </head>
 <body>
-	<%= render partial: 'layouts/header' %>
+	<%= render 'layouts/header' %>
 	<div class="container">
+	<% flash.each do |message_type, message| %>
+		<div class="alert alert-<%= message_type %>"><%= message %></div>
+	<% end %>
 	<%= yield %>
-	<%= render partial: 'layouts/footer' %>
+	<%= render 'layouts/footer' %>
+	<%= debug(params) if Rails.env.development? %>
 	</div>
 </body>
 </html>
